# ms-dsc

./: .gitignore  README.md
DSC530_EDA/: JenaBinay_writeup_final_project.docx
DSC680/dsc500_hadoop_framework/: README.md
DSC680/dsc510_python_programming/: README.md  binay.txt  gettysburg.txt  project_weatherapp.py  sample_formatted.txt  week10_checkout_cart_cashregister.py  week3_diff_rate_print_receipt.py  week4_functions_print_receipt.py  week5_math_operations.py  week6_temperature_list.py  week7_count_words_in_file.py  week7_prof_code.py  week8_write_to_file_word_count.py  week9_get_api_response.py
DSC680/dsc520_statistics_for_data_science/: README.md  Week_12_Final_Project.docx
DSC680/dsc530_data_exploration_and_analysis/: Data Exploration and Analysis - final workings.ipynb  README.md
DSC680/dsc550_data_mining/: DSC550_Jena_Binay_Week_10_Milestone_5_Trump_Tweets 2014-2021.ipynb  README.md
DSC680/dsc630_predictive_analytics/: DSC630 - Week 12 - Milestone 5_Jena Binay.ipynb  README.md
DSC680/dsc640_data_visualization/: README.md
dsc680_car_pricing/: README.md
dsc680_dw_pipeline_infra/: .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  README.md  pyproject.toml
dsc680_project/: .local  .pre-push-config.yaml  Makefile  README.md  pyproject.toml
dsc680_project/dags/: salesforce_job.py
dsc680_project/python/: sfdc_transforms.py
dsc680_project/python/queries/: sfdc_open_pipe_coverage.sql
dsc680_project/python/util/: table_schema.py  utilities.py
dsc680_project/redshift/: sfdc_opportunity_trend.sql
(+9 files in other folders)
